Hopefully fixes overflow issue on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,7 +25,9 @@ code {
 }
 
 html {
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
   font-family: var(--ff-main);
   font-size: 1.125rem;
 }
